8227539: Replace wildcard address with loopback or local host in tests - part 20
Update some tests to stop using the wildcard address.

Reviewed-by: michaelm